--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
-ipdb~=0.13.9
-torchmetrics~=0.7.0
-transformers~=4.16.2
 numpy~=1.21.2
-tqdm~=4.62.3
-timm~=0.5.4
-sacred~=0.8.2
-Pillow~=8.4.0
 pandas~=1.4.0
 scikit-learn~=1.0.2
-fastai~=2.5.3
+torch~=1.10
 torchvision~=0.11.3
+transformers~=4.16.2
+torchmetrics~=0.7.0
 pytorch-lightning~=1.5.9
+timm~=0.5.4
+ipdb~=0.13.9
+tqdm~=4.62.3
+sacred~=0.8.2
+Pillow~=8.4.0
+fastai~=2.5.3
 wandb~=0.12.10
+opencv-python~=4.6.0
+ttach~=0.0.3
+captum~=0.5.0
+seaborn
+einops
+notebook
+ipykernel
+ipywidgets
